refactor: align MFA flows and recovery handling